# bedrock-gateway

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.en.md  README.md  README_CN.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bedrock_gateway/: __init__.py  __main__.py  auth.py  config.py  converter.py  models.py  server.py
bedrock_gateway/dashboard/: __init__.py  api.py  health.py  metrics.py  middleware.py  security.py  storage.py
bedrock_gateway/dashboard/static/: app.js  index.html  style.css
tests/: test_api.py  test_api_key_auth.py  test_auth.py  test_auth_coverage.py  test_config.py  test_converter.py  test_dashboard.py  test_dashboard_coverage.py  test_fixes_0_1_1.py  test_health_coverage.py  test_integration_0_1_1.py  test_integration_0_1_2.py  test_messages_api.py  test_misc_coverage.py  test_model_validation.py  test_models_coverage.py  test_opus_4_8.py  test_server_coverage.py  test_thinking.py  test_upstream_health.py
